# scalable-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml  test_deploy.yaml
results/gpu_1/: slurm-25240047.out
results/gpu_4/: slurm-25268489.out
results/lightning/: slurm-25284557.out
results/lightning/version_19/: events.out.tfevents.1739729497.uc2n519.localdomain.772063.0  fit-perf_logs-0.txt  fit-perf_logs-1.txt  fit-perf_logs-2.txt  fit-perf_logs-3.txt  hparams.yaml
scripts/: run_alexnet_parallel.sh  run_alexnet_serial.sh  run_lightning.sh
src/scalai/: ddp_lightning.py
src/scalai/dpnn/: __alex__.py  __alex_ddp__.py  __init__.py  alex.py  alex_ddp.py  model.py  utils_data.py  utils_eval.py  utils_train.py
tests/: test_main.py
