[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Scalable-AI"
version = "0.0.0"
description = "Scalable AI implementations using PyTorch"
authors = [
    { name = "Moritz Mistol", email = "moritz.mistol@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.12.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.1.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[project.scripts]
alex_serial = "scalai.dpnn.__alex__:main"
alex_parallel = "scalai.dpnn.__alex_ddp__:main"

[tool.uv]
dev-dependencies = [
    "pdoc>=14.7.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scalai"]


[tool.ruff]
line-length = 88
extend-exclude = ["src/scalai/__init__.py"]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pandas related
    "PD",
]
extend-ignore = ["D203", "D213", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
